k8s/ingress-gateway.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: money-manager-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/add-base-url: "true"
spec:
  rules:
  - host: myapp.local
    http:
      paths:
      - path: /react
        pathType: Prefix
        backend:
          service:
            name: react
            port:
              number: 5173
      - path: /api/docs
        pathType: Prefix
        backend:
          service:
            name: fastapi
            port:
              number: 8000
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: fastapi
            port:
              number: 8000
      - path: /pgadmin
        pathType: Prefix
        backend:
          service:
            name: pgadmin
            port:
              number: 80
      - path: /@vite
        pathType: Prefix
        backend:
          service:
            name: react
            port:
              number: 5173
      - path: /@react-refresh
        pathType: Prefix
        backend:
          service:
            name: react
            port:
              number: 5173
      - path: /src
        pathType: Prefix
        backend:
          service:
            name: react
            port:
              number: 5173
